Initial state of new jdk-foreign MMAP API